Adding first project structure, logging, allure report.

--- a/SalesForceTests/appsettings.json
+++ b/SalesForceTests/appsettings.json
@@ -1,7 +1,7 @@
 {
   "API": {
-    "BaseUrl": "https://ooomtsdi-dev-ed.develop.my.salesforce.com/",
-    "Token": "Bearer 00DHr0000017Sbq!ARoAQP2fdSqSEcMndFsduZIqdvhunHCltJh_rguKrEpDDP2hglq.m6EiBb.OoteC1xzHc8sYiVTD2XyOrWT_JUwkL2ZTZNWO"
+    "BaseUrl": "https://ooomtsdi-dev-ed.develop.my.salesforce.com/services/data/v58.0/",
+    "Token": "Bearer  00DHr0000017Sbq!ARoAQIZrCWS2z0r5TGjfMq5QflSMrgtHyWt8Q9TW5NhetaQYd_5gz0q4cYllFBLcEN.0oMy8oskAgyYzj_qc93lY40M3m4ry"
   },
   "Browser": {
     "Headless": "true",
