Adding UI tests on change and delete account and contact (doen't work)

--- a/SalesForceTests/Configs/appsettings.Prod.json
+++ b/SalesForceTests/Configs/appsettings.Prod.json
@@ -8,6 +8,7 @@
     "Type": "Chrome",
     "TimeOut": 100,
     "UserName": "someName@ya.ru",
-    "UserPassword": "SomePass"
+    "UserPassword": "SomePass",
+    "Server": "prod.lightning.force.com"
   }
   }
