--- a/SalesForceTests/Configs/appsettings.json
+++ b/SalesForceTests/Configs/appsettings.json
@@ -1,13 +1,15 @@
 {
   "API": {
     "BaseUrl": "https://ooomtsdi-dev-ed.develop.my.salesforce.com/services/data/v58.0/",
-    "Token": "Bearer  00DHr0000017Sbq!ARoAQPOFP27lJbXBc3GgbWgxV_IQjxkrOKxBl._WdzwpwpOmCRpug7Qr.3AFiVog_U1Q8.iQSDdV6UKyvLvwFmTVFyS8FSPR"
+    "Token": "Bearer  00DHr0000017Sbq!ARoAQPh1xZFT1JwC.vohffovOzAf4X4R7dEIP_vbTKtvO0XQ.EiKXArz028lVYecKS3cRFyFqQ9xlct2aYF.2o4Wc1tFNZJM"
   },
   "Browser": {
     "Headless": "true",
     "Type": "Chrome",
     "TimeOut": 10,
     "UserName": "margo.aleksandrovna@ya.ru",
-    "UserPassword": "Guru$#123SomeGuru"
+    "UserPassword": "Guru$#123SomeGuru",
+    "Server": "ooomtsdi-dev-ed.develop.lightning.force.com",
+    "DownloadFolder": "C:\\Users\\mamaka11\\Downloads\\"
   }
   }
