--- a/SalesForceTests/Configs/appsettings.json
+++ b/SalesForceTests/Configs/appsettings.json
@@ -4,7 +4,7 @@
     "Token": "Bearer  00DHr0000017Sbq!ARoAQPh1xZFT1JwC.vohffovOzAf4X4R7dEIP_vbTKtvO0XQ.EiKXArz028lVYecKS3cRFyFqQ9xlct2aYF.2o4Wc1tFNZJM"
   },
   "Browser": {
-    "Headless": "true",
+    "Headless": "false",
     "Type": "Chrome",
     "TimeOut": 10,
     "UserName": "margo.aleksandrovna@ya.ru",
