Update azure-pipelines.yml for Azure Pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -28,5 +28,5 @@ steps:
 - task: VSTest@3
   displayName: 'Run test'
   inputs:
-    runSettingsFile: 'Configs\appsettings.Debug.json'
+    runSettingsFile: 'Test\Configs\appsettings.Debug.json'
     overrideTestrunParameters: '-API.Token ${token}'
