--- a/SalesForceTests/Configs/appsettings.Debug.json
+++ b/SalesForceTests/Configs/appsettings.Debug.json
@@ -1,6 +1,6 @@
 {
   "API": {
-    "Token": "Bearer 00DHr0000017Sbq!ARoAQDXHvVAquJdIF3l5sQ9ZVPADHOch7chUUxuDzm7SofH0kgm.RkX_PdoSVMJWzq07eHA5wB7gMjiik4DXsyA4BitxdwCd"
+    "Token": "Bearer 00DHr0000017Sbq!ARoAQDXHvVAquJdIF3l5sQ9ZVPADHOch7chUUxuDzm7SofH0kgm."
   },
   "Browser": {
   }
