Refactoring. Add description for methods. Generate xml documentation. Add contact test cases.

--- a/SalesForceTests/Configs/appsettings.Debug.json
+++ b/SalesForceTests/Configs/appsettings.Debug.json
@@ -1,7 +1,8 @@
 {
   "API": {
-    "Token": "Bearer 00DHr0000017Sbq!ARoAQDXHvVAquJdIF3l5sQ9ZVPADHOch7chUUxuDzm7SofH0kgm."
+    "Token": "Bearer 00DHr0000017Sbq!ARoAQMcG.wupxTLXGCMKsTT4HWIKYN0iuiAVZghXRrMx34QKlY0K7bfMc_Wo5fvJZVOTtLTJ6n2g58eM_aTF9a3NlLB.0eI0"
   },
   "Browser": {
+    "UserPassword": "Guru$#123SomeGuru"
   }
 }
