--- a/SalesForceTests/Tests.csproj
+++ b/SalesForceTests/Tests.csproj
@@ -8,6 +8,8 @@
     <IsPackable>false</IsPackable>
 
     <Configurations>Debug;Release;Prod</Configurations>
+
+    <GenerateDocumentationFile>True</GenerateDocumentationFile>
   </PropertyGroup>
 
   <ItemGroup>
