--- a/BusinessObject/BusinessObject.csproj
+++ b/BusinessObject/BusinessObject.csproj
@@ -11,7 +11,7 @@
 	<ItemGroup>
 		<PackageReference Include="Bogus" Version="34.0.2" />
 		<PackageReference Include="FluentAssertions" Version="6.11.0" />
-		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0-preview.23280.1" />
+		<PackageReference Include="Microsoft.NET.Test.Sdk" Version="17.7.0-preview-23364-03" />
 		<PackageReference Include="NLog" Version="5.2.2" />
 		<PackageReference Include="NUnit" Version="3.13.3" />
 		<PackageReference Include="NUnit.Allure" Version="1.2.1.1" />
@@ -23,7 +23,7 @@
 		</PackageReference>
 		<PackageReference Include="Selenium.Support" Version="4.10.0" />
 		<PackageReference Include="Selenium.WebDriver" Version="4.10.0" />
-		<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="114.0.5735.9000" />
+		<PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="115.0.5790.10200" />
 		<PackageReference Include="Faker" Version="1.2.0" />
 	</ItemGroup>
 
